# ilo4-fan-control

./: .gitignore  Cargo.toml  Cross.toml  README.md  example.cofing.py  ilo4-fan-control.service  ilo4_fan_control.service  install.ps1  install.sh  main.py  sample-multi.toml  sample.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  testing.yml
src/: cmds.rs  config.rs  cputemp.rs  gen_ssh.rs  lib.rs  main.rs  ssh.rs
src/cmds/: config.rs  daemon.rs  sample.rs  status.rs  utils.rs
test-https-server/: index.html  localhost.pem  runserver.py
